1. Optimize the interface 2. Add progress bar prompt for login and logout

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -2,26 +2,26 @@
     <string name="app_name">The Movie Database</string>
     <string name="home_page">Startseite</string>
     <string name="movie">Film</string>
-    <string name="search">suchen</string>
+    <string name="search">Suchen</string>
     <string name="tv_show">Fernsehsendung</string>
     <string name="celebrities">Figur</string>
-    <string name="trending">beliebt</string>
-    <string name="now_playing">heiße Sendung</string>
-    <string name="upcoming">demnächst</string>
+    <string name="trending">Beliebt</string>
+    <string name="now_playing">Heiße Sendung</string>
+    <string name="upcoming">Demnächst</string>
     <string name="popular">Popularität</string>
     <string name="top_rated">Gut erhalten</string>
-    <string name="airing_today">heute ausgestrahlt</string>
+    <string name="airing_today">Heute ausgestrahlt</string>
     <string name="on_tv">Fernsehen</string>
 
-    <string name="about">um</string>
+    <string name="about">Um</string>
     <string name="overview">Zusammenfassung</string>
     <string name="crew">Mitarbeiter</string>
-    <string name="cast">mit</string>
+    <string name="cast">Mit</string>
     <string name="seasons">Jahreszeit</string>
     <string name="episode">Folge</string>
     <string name="episode_count">Folge</string>
     <string name="comments">Kommentar</string>
-    <string name="reviews">auswerten</string>
+    <string name="reviews">Auswerten</string>
     <string name="recommendations">推荐</string>
     <string name="similar">ähnlich</string>
     <string name="hour">Stunde</string>
@@ -40,35 +40,35 @@
     <string name="companies">Produktionsfirma</string>
     <string name="budget">Budget</string>
     <string name="revenue">Theaterkasse</string>
-    <string name="alternative_titles">alias</string>
+    <string name="alternative_titles">Alias</string>
     <string name="connection_error">Prüfe deine Internetverbindung</string>
-    <string name="tap_to_retry">klicken Sie auf Wiederholen</string>
+    <string name="tap_to_retry">Klicken Sie auf Wiederholen</string>
     <string name="movie_info">Filminformationen</string>
     <string name="tv_info">Informationen zum TV-Drama</string>
     <string name="video">Video</string>
     <string name="keywords">Schlüsselwörter</string>
     <string name="posters">Poster</string>
     <string name="backdrops">Standbilder</string>
-    <string name="no_data">keine Daten</string>
+    <string name="no_data">Keine Daten</string>
     <string name="gender">Geschlecht</string>
-    <string name="female">weiblich</string>
-    <string name="male">männlich</string>
-    <string name="born_on">geboren in</string>
-    <string name="died_on">starb in</string>
-    <string name="from">aus</string>
+    <string name="female">Weiblich</string>
+    <string name="male">Männlich</string>
+    <string name="born_on">Geboren in</string>
+    <string name="died_on">Starb in</string>
+    <string name="from">Aus</string>
     <string name="biography">Persönliches Profil</string>
-    <string name="also_known_as">wird auch genannt</string>
+    <string name="also_known_as">Wird auch genannt</string>
     <string name="season_info">Informationen zur Saison</string>
     <string name="episode_info">Episodeninformationen</string>
-    <string name="first_air_date">erster Vorführtermin</string>
+    <string name="first_air_date">Erster Vorführtermin</string>
     <string name="seasons_number">Staffelnummer</string>
     <string name="episode_number">Episodennummer</string>
     <string name="guest_stars">Gaststar</string>
     <string name="last_air_date">letztes Showdatum</string>
-    <string name="last_episode_to_air">neuste Folge</string>
+    <string name="last_episode_to_air">Neuste Folge</string>
     <string name="next_episode_to_air">Nächste Folge</string>
     <string name="released">Veröffentlicht</string>
-    <string name="ended">fertig</string>
+    <string name="ended">Fertig</string>
     <string name="year">年</string>
     <string name="month">月</string>
     <string name="day">日</string>
@@ -87,23 +87,23 @@
     <string name="premiere">Premiere</string>
     <string name="theatrical">freigegeben</string>
     <string name="digital">Nummer</string>
-    <string name="physical">in Form von Sachleistungen</string>
+    <string name="physical">In Form von Sachleistungen</string>
     <string name="release_info">Informationen freigeben</string>
-    <string name="your_account">ihr Konto</string>
+    <string name="your_account">Ihr Konto</string>
     <string name="sign_in_sign_up">Anmeldung Registrieren</string>
     <string name="logout">Ausloggen</string>
-    <string name="settings">aufstellen</string>
+    <string name="settings">Aufstellen</string>
     <string name="watchlist">Beobachtungsliste</string>
-    <string name="favourite">sammeln</string>
+    <string name="favourite">Sammeln</string>
     <string name="rating">Punktzahl</string>
     <string name="page_format">Buchseite:%1$d/%2$d</string>
-    <string name="total_format">gesamt:%1$d</string>
+    <string name="total_format">Gesamt:%1$d</string>
     <string name="sign_in">Anmeldung</string>
-    <string name="register">registrieren</string>
+    <string name="register">Registrieren</string>
     <string name="username">Nutzername</string>
     <string name="prompt_password">Passwort</string>
-    <string name="unknow_date">unbekanntes Datum.</string>
-    <string name="specials">besondere Folge</string>
+    <string name="unknow_date">Unbekanntes Datum.</string>
+    <string name="specials">Besondere Folge</string>
     <string name="season_number_format">Staffel%1$d</string>
     <string name="unknown">Unbekannt</string>
     <string name="login_tip">Bitte melden Sie sich an, um zu arbeiten!</string>
@@ -111,9 +111,9 @@
     <string name="user_rating">Benutzer-Bewertung</string>
     <string name="review_created_time_fromat">%1$s geschrieben in %2$s</string>
     <string name="adult_content">Inhalt für Erwachsene</string>
-    <string name="night_mode">dunkler Modus</string>
-    <string name="submit">einreichen</string>
-    <string name="remove">entfernen</string>
+    <string name="night_mode">Dunkler Modus</string>
+    <string name="submit">Einreichen</string>
+    <string name="remove">Entfernen</string>
     <string name="delete_rating_successfully">Bewertung erfolgreich gelöscht</string>
     <string name="delete_rating_failed">Bewertung konnte nicht gelöscht werden</string>
     <string name="successful_rating">Erfolgreich gepunktet!</string>
@@ -125,5 +125,5 @@
     <string name="week">Woche</string>
     <string name="remember_password">Passwort merken</string>
     <string name="application_language">Anwendungssprache</string>
-    <string name="follow_system">dem System folgen</string>
+    <string name="follow_system">Dem System folgen</string>
 </resources>
