--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,74 +1,74 @@
 <resources>
     <string name="app_name">The Movie Database</string>
-    <string name="home_page">page d\'accueil</string>
+    <string name="home_page">Page d\'accueil</string>
     <string name="movie">Film</string>
-    <string name="search">recherche</string>
-    <string name="tv_show">émission de télévision</string>
-    <string name="celebrities">chiffre</string>
-    <string name="trending">populaire</string>
-    <string name="now_playing">spectacle chaud</string>
+    <string name="search">Recherche</string>
+    <string name="tv_show">Télévision</string>
+    <string name="celebrities">Chiffre</string>
+    <string name="trending">Populaire</string>
+    <string name="now_playing">Spectacle chaud</string>
     <string name="upcoming">à venir</string>
     <string name="popular">Popularité</string>
     <string name="top_rated">Bien reçu</string>
-    <string name="airing_today">diffusé aujourd\'hui</string>
-    <string name="on_tv">télévision</string>
+    <string name="airing_today">Diffusé aujourd\'hui</string>
+    <string name="on_tv">Télévision</string>
 
     <string name="about">à propos</string>
     <string name="overview">Synopsis</string>
-    <string name="crew">membre du staff</string>
-    <string name="cast">mettant en vedette</string>
-    <string name="seasons">saison</string>
-    <string name="episode">épisode</string>
+    <string name="crew">Membre du staff</string>
+    <string name="cast">Mettant en vedette</string>
+    <string name="seasons">Saison</string>
+    <string name="episode">Épisode</string>
     <string name="episode_count">Épisode</string>
     <string name="comments">Commentaire</string>
-    <string name="reviews">évaluer</string>
-    <string name="recommendations">recommander</string>
-    <string name="similar">similaire</string>
+    <string name="reviews">Évaluer</string>
+    <string name="recommendations">Recommander</string>
+    <string name="similar">Similaire</string>
     <string name="hour">Heure</string>
-    <string name="min">minute</string>
+    <string name="min">Minute</string>
     <string name="no_overview_tip">Nous n\'avons pas de synopsis.</string>
     <string name="no_biography_tip">Nous n\'avons pas de profil.</string>
-    <string name="genres">taper</string>
-    <string name="network">réseau</string>
+    <string name="genres">Taper</string>
+    <string name="network">Réseau</string>
     <string name="original_title">Pays d\'origine</string>
     <string name="aired_episodes">Épisodes diffusés</string>
     <string name="status">État</string>
-    <string name="runtime">durée</string>
-    <string name="original_language">langue originale</string>
-    <string name="production_countries">pays de production</string>
-    <string name="certification">notation</string>
-    <string name="companies">société de production</string>
+    <string name="runtime">Durée</string>
+    <string name="original_language">Langue originale</string>
+    <string name="production_countries">Pays de production</string>
+    <string name="certification">Notation</string>
+    <string name="companies">Société de production</string>
     <string name="budget">Budget</string>
-    <string name="revenue">box-office</string>
-    <string name="alternative_titles">alias</string>
+    <string name="revenue">Box-office</string>
+    <string name="alternative_titles">Alias</string>
     <string name="connection_error">Vérifiez votre connection internet</string>
-    <string name="tap_to_retry">cliquez sur réessayer</string>
-    <string name="movie_info">informations sur le film</string>
+    <string name="tap_to_retry">Cliquez sur réessayer</string>
+    <string name="movie_info">Informations sur le film</string>
     <string name="tv_info">Informations sur les séries télévisées</string>
-    <string name="video">vidéo</string>
+    <string name="video">Vidéo</string>
     <string name="keywords">Mots clés</string>
-    <string name="posters">affiche</string>
+    <string name="posters">Affiche</string>
     <string name="backdrops">Images fixes</string>
-    <string name="no_data">pas de données</string>
-    <string name="gender">genre</string>
-    <string name="female">femme</string>
-    <string name="male">homme</string>
-    <string name="born_on">né en</string>
-    <string name="died_on">mort en</string>
-    <string name="from">depuis</string>
+    <string name="no_data">Pas de données</string>
+    <string name="gender">Genre</string>
+    <string name="female">Femme</string>
+    <string name="male">Homme</string>
+    <string name="born_on">Né en</string>
+    <string name="died_on">Mort en</string>
+    <string name="from">Depuis</string>
     <string name="biography">Profil personnel</string>
-    <string name="also_known_as">s\'appelle aussi</string>
-    <string name="season_info">informations sur la saison</string>
-    <string name="episode_info">informations sur l\'épisode</string>
-    <string name="first_air_date">date de la première projection</string>
-    <string name="seasons_number">numéro de saison</string>
-    <string name="episode_number">numéro d\'épisode</string>
+    <string name="also_known_as">S\'appelle aussi</string>
+    <string name="season_info">Informations sur la saison</string>
+    <string name="episode_info">Informations sur l\'épisode</string>
+    <string name="first_air_date">Date de la première projection</string>
+    <string name="seasons_number">Numéro de saison</string>
+    <string name="episode_number">Numéro d\'épisode</string>
     <string name="guest_stars">Guest-star</string>
-    <string name="last_air_date">date du dernier spectacle</string>
-    <string name="last_episode_to_air">dernier épisode</string>
-    <string name="next_episode_to_air">l\'épisode suivant</string>
+    <string name="last_air_date">Date du dernier spectacle</string>
+    <string name="last_episode_to_air">Dernier épisode</string>
+    <string name="next_episode_to_air">L\'épisode suivant</string>
     <string name="released">Publié</string>
-    <string name="ended">fini</string>
+    <string name="ended">Fini</string>
     <string name="year">年</string>
     <string name="month">月</string>
     <string name="day">日</string>
@@ -84,35 +84,35 @@
     <string name="october">Octobre</string>
     <string name="november">Novembre</string>
     <string name="december">Décembre</string>
-    <string name="premiere">première</string>
-    <string name="theatrical">libéré</string>
-    <string name="digital">nombre</string>
-    <string name="physical">en nature</string>
+    <string name="premiere">Première</string>
+    <string name="theatrical">Libéré</string>
+    <string name="digital">Nombre</string>
+    <string name="physical">En nature</string>
     <string name="release_info">Divulguer des renseignements</string>
     <string name="your_account">Votre compte</string>
     <string name="sign_in_sign_up">S\'identifier S\'enregistrer</string>
     <string name="logout">Se déconnecter</string>
-    <string name="settings">installation</string>
+    <string name="settings">Installation</string>
     <string name="watchlist">liste de surveillance</string>
-    <string name="favourite">collecter</string>
+    <string name="favourite">Collecter</string>
     <string name="page_format">Page:%1$d/%2$d</string>
-    <string name="total_format">total:%1$d</string>
+    <string name="total_format">Total:%1$d</string>
     <string name="sign_in">Connexion</string>
-    <string name="register">enregistrer</string>
-    <string name="username">nom d\'utilisateur</string>
-    <string name="prompt_password">mot de passe</string>
-    <string name="unknow_date">date inconnue.</string>
-    <string name="specials">épisode spécial</string>
+    <string name="register">Enregistrer</string>
+    <string name="username">Nom d\'utilisateur</string>
+    <string name="prompt_password">Mot de passe</string>
+    <string name="unknow_date">Date inconnue.</string>
+    <string name="specials">Épisode spécial</string>
     <string name="season_number_format">Saison%1$d</string>
-    <string name="unknown">inconnu</string>
+    <string name="unknown">Inconnu</string>
     <string name="login_tip">Veuillez vous connecter pour opérer !</string>
     <string name="search_hint">Rechercher des films, des épisodes, des personnes</string>
-    <string name="user_rating">note de l\'utilisateur</string>
+    <string name="user_rating">Note de l\'utilisateur</string>
     <string name="review_created_time_fromat">%1$s écrit en %2$s</string>
-    <string name="adult_content">contenu adulte</string>
-    <string name="night_mode">mode sombre</string>
-    <string name="submit">soumettre</string>
-    <string name="remove">retirer</string>
+    <string name="adult_content">Contenu adulte</string>
+    <string name="night_mode">Mode sombre</string>
+    <string name="submit">Soumettre</string>
+    <string name="remove">Retirer</string>
     <string name="delete_rating_successfully">Note supprimée avec succès</string>
     <string name="delete_rating_failed">Échec de la suppression de l\'évaluation</string>
     <string name="successful_rating">Marqué avec succès !</string>
@@ -120,10 +120,10 @@
     <string name="successful_operation">Opération réussie !</string>
     <string name="operation_failed">l\'opération a échoué!</string>
     <string name="search_bg_hint">Trouvez vos films, émissions de télévision et personnes préférés</string>
-    <string name="today">jour</string>
-    <string name="week">semaine</string>
-    <string name="remember_password">se souvenir du mot de passe</string>
+    <string name="today">Jour</string>
+    <string name="week">Semaine</string>
+    <string name="remember_password">Se souvenir du mot de passe</string>
     <string name="application_language">langue des applications</string>
-    <string name="follow_system">suivre le système</string>
-    <string name="rating">score</string>
+    <string name="follow_system">Suivre le système</string>
+    <string name="rating">Score</string>
 </resources>
